# ha-anker-solix-f2000

./: .gitignore  Dockerfile  README.md  agent-guidelines.md  docker-compose.yml  hacs.json  pyproject.toml
.agent/skills/openspec-commit-changes/: SKILL.md
.agent/skills/openspec-update-docs/: SKILL.md
.agent/skills/openspec-validate-code/: SKILL.md
.agent/workflows/: opsx-commit.md  opsx-docs.md  opsx-push.md  opsx-validate.md
.github/workflows/: release.yaml  validate.yaml
custom_components/anker_solix_f2000/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  number.py  select.py  sensor.py  strings.json  switch.py
openspec/: config.yaml  style-guide.md
openspec/changes/add-f2000-controls/: design.md  proposal.md  tasks.md
openspec/changes/anker-solix-ble-hacs/: design.md  proposal.md  tasks.md
openspec/changes/audit-and-align-docs-and-code/: proposal.md  tasks.md
openspec/changes/f2000-timer-sensors/: design.md
test-scripts/: diagnose_gatt.py  requirements.txt  test_heartbeat.py  test_mock_telemetry.py  test_passive_telemetry.py  test_raw_telemetry.py  test_telemetry.py
tests/: README.md  compare_settings.py  diagnose_gatt.py  discover_recharge_exhaustive.py  discover_timeout_protocol.py  explore_controls.py  mock_f2000.py  sniff_display_settings.py  test_heartbeat.py  test_mock_telemetry.py  test_passive_telemetry.py  validate_ac_dc.py  validate_led.py  validate_power_save.py  validate_recharge_power.py  validate_screen_brightness.py  validate_screen_timeout.py  validate_timers.py  validate_toggle_guard.py
(+105 files in other folders)
